--- a/assets/scss/components/home.scss
+++ b/assets/scss/components/home.scss
@@ -5,7 +5,6 @@
       text-align: left;
 
       .container {
-        color: $text-dark;
         font-size: 1.3rem;
 
         .content {
