--- a/assets/scss/components/page-index.scss
+++ b/assets/scss/components/page-index.scss
@@ -12,7 +12,6 @@
   }
 
   .description {
-    color: $text-dark;
     font-size: 1.45rem;
     margin-bottom: 0;
   }
