--- a/assets/scss/components/variables.scss
+++ b/assets/scss/components/variables.scss
@@ -11,7 +11,6 @@ $navbar-hover: #272727;
 $reverse: $border;
 $text: #D3C6AA;
 $text-bright: #fff;
-$text-dark: #8f949d;
 $text-heading: $primary;
 
 $font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
